fix mobile problem on sale.html

--- a/sale.html
+++ b/sale.html
@@ -54,16 +54,16 @@
     <div class="contentfarm">
       <h2 class="my-4">For Sale or Lease</h2><hr>
         <div class="row">
-            <div class="col-3">
+            <div class="col-12 col-md-3">
                 <img src="img/sale/sueno.jpg" class="w-100">
             </div>
-            <div class="col-6">
+            <div class="col-12 col-md-6">
                 <center>
                     <h4>For Sale: Sue&ntilde;o</h4>
                     <p>Sueno is a 15 year old, 14.2 registered Paso Fino. He is a fun and sweet goofball with some brio. While he is a forward going horse, he is also happy to relax, stretch down, and walk on the buckle when asked. He is great on trails – traffic safe, crosses water and bridges, and is not spooky. He has been shown and attended a parade while with us – both of which he behaved beautifully for. He trailers great, stands quietly for everything – grooming, clipping, bathing, and the farrier. Great corto and largo, lovely head carriage and mouth (goes best in a snaffle), and is learning how to canter. UTD on shots, deworming, feet, and dental. Call or text to arrange an appointment to meet him! </p>
                 </center>
             </div>
-            <div class="col-3">
+            <div class="col-12 col-md-3">
                 <img src="img/sale/sueno2.jpg" class="w-100">
             </div>
         </div>
