--- a/boarding.html
+++ b/boarding.html
@@ -97,7 +97,7 @@
                 <li>19 stall barn</li>
                 <li>Direct access to 1,600 + acres of well maintained trails</li>
                 <li>Outdoor Arena with sand footing (indoor coming soon)</li>
-                <li>Ample turn outs with brand new Flexi Fencing</li>
+                <li>Ample turn outs with brand new rubber coated wire and wood fencing</li>
                 <li>Access to Run-Ins in all turn outs</li>
                 <li>Cross country jump course</li>
                 <li>Heated water troughs </li>
