--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div class="row">
         <div class="col-sm-8">
           <h2 class="mt-4">About</h2>
-            <p>Stony Brook Farm is an equine boarding and riding lesson facility located in Princeton, NJ. We offer high quality, detail oriented care for you horse as well as riding lessons for beginner through intermediate riders in a positive, friendly atmosphere!</p><br>
+            <p>Stony Brook Farm is an equine boarding and riding lesson facility located in Princeton, NJ. We offer high quality, detail oriented care for your horse as well as riding lessons for beginner through intermediate riders in a positive, friendly atmosphere!</p><br>
             <h5>Barn Manager: Kate Bosch</h5>
             <p>Barn manager and instructor Kate Bosch started riding at the age of seven and has passionately pursued a life with horses since then. She graduated Centenary College in 2010 with a Bachelor's Degree in Equine Studies, with her primary focus on barn management. She began working at Stony Brook Farm immediately after graduating from college. Kate prides herself in maintaining a clean, organized barn with a friendly atmosphere. She is a well rounded horse person, with experience in a wide variety of riding disiplines including english, western, gaited horses, and driving. She believes consistency, quietness, and patience play key roles in creating both confident horses and riders.</p><br>
         </div>
