--- a/index.html
+++ b/index.html
@@ -1,133 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
+<head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-    <title>Stony Brook Stables</title>
+  <title>Stony Brook Stables</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="css/business-frontpage.css" rel="stylesheet">
-    <link href="https://use.fontawesome.com/releases/v5.0.2/css/all.css" rel="stylesheet">
+  <!-- Custom styles for this template -->
+  <link href="css/small-business.css" rel="stylesheet">
 
-  </head>
+</head>
 
-  <body>
+<body>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="#">Stony Brook Stables</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="boarding.html">Boarding</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="lesson.html">Lesson Program</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="retirement.html">Retirement Boarding</a>
-            </li>
-              <li class="nav-item">
-              <a class="nav-link" href="sale.html">For Sale or Lease</a>
-            </li>
-          </ul>
-        </div>
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="#">Stony Brook Stables</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">Home
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="services.html">Services</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="sale.html">For Sale or Lease</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="gallery.html">Gallery</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+        </ul>
       </div>
-    </nav>
+    </div>
+  </nav>
 
-    <!-- Header with Background Image -->
-    <header class="business-header">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-            <h1 class="display-3 text-center text-white mt-4" ></h1>
+  <!-- Page Content -->
+  <div class="container">
+
+    <!-- Heading Row -->
+    <div class="row align-items-center my-5">
+      <div class="col-lg-7">
+        <img class="img-fluid rounded mb-4 mb-lg-0" src="img/home.jpg" alt="">
+      </div>
+      <!-- /.col-lg-8 -->
+      <div class="col-lg-5">
+        <h1 class="font-weight-light">Stony Brook Stables</h1>
+        <p>Stony Brook Stables is an equine boarding and riding lesson facility located in Princeton, NJ. We offer high quality, detail oriented care for your horse as well as riding lessons for beginner through intermediate riders in a positive, friendly atmosphere!</p>
+        <a class="btn btn-success" href="contact.html">Visit Us</a>
+      </div>
+      <!-- /.col-md-4 -->
+    </div>
+    <!-- /.row -->
+
+    <!-- Call to Action Well -->
+    <div class="card text-white bg-success my-5 py-4 text-center">
+      <div class="card-body">
+        <p class="text-white m-0">Now accepting new stall and field boarders! Please <a href="contact.html" class="stretched-link" id="homeLink">contact us</a> for more details or to arrange a farm visit.</p>
+      </div>
+    </div>
+
+    <!-- Content Row -->
+    <div class="row">
+      <div class="col-md-4 mb-5">
+        <div class="card h-100">
+          <div class="card-body">
+            <h2 class="card-title">Boarding</h2>
+            <p class="card-text">Stony Brook Farm employees take pride in being friendly, detail oriented, highly motivated horse people. We offer show barn level care without the show barn atmosphere.</p>
+          </div>
+          <div class="card-footer">
+            <a href="services.html" class="btn btn-success btn-sm">Learn More</a>
           </div>
         </div>
       </div>
-    </header>
-      <div >
-        <h1 id="headertitle">Stony Brook Stables, Princeton NJ</h1>
+      <!-- /.col-md-4 -->
+      <div class="col-md-4 mb-5">
+        <div class="card h-100">
+          <div class="card-body">
+            <h2 class="card-title">Lesson Program</h2>
+            <p class="card-text">Stony Brook Farm offers English or Western riding lessons to beginner - intermediate riders. The quiet atmosphere of the barn and friendly instructors will make you or your child feel welcome and comfortable to grow as a horse person and most importantly - enjoy it!</p>
+          </div>
+          <div class="card-footer">
+            <a href="services.html#Lesson" class="btn btn-success btn-sm">Learn More</a>
+          </div>
+        </div>
       </div>
+      <!-- /.col-md-4 -->
+      <div class="col-md-4 mb-5">
+        <div class="card h-100">
+          <div class="card-body">
+            <h2 class="card-title">Retirement Boarding</h2>
+            <p class="card-text">Your senior horse will enjoy a quiet and peaceful retirement with all the spoils they deserve and you will enjoy the peace of mind of knowing your best equine companion is comfortable and well cared for.</p>
+          </div>
+          <div class="card-footer">
+            <a href="services.html#RBoarding" class="btn btn-success btn-sm">Learn More</a>
+          </div>
+        </div>
+      </div>
+      <!-- /.col-md-4 -->
 
-    <!-- Page Content -->
+    </div>
+    <!-- /.row -->
+
+  </div>
+  <!-- /.container -->
+
+  <!-- Footer -->
+  <footer class="py-5 bg-dark">
     <div class="container">
-
-      <div class="row">
-        <div class="col-sm-8">
-          <h2 class="mt-4">About</h2>
-            <p>Stony Brook Farm is an equine boarding and riding lesson facility located in Princeton, NJ. We offer high quality, detail oriented care for your horse as well as riding lessons for beginner through intermediate riders in a positive, friendly atmosphere!</p><br>
-            <h5>Barn Manager: Kate Bosch</h5>
-            <p>Barn manager and instructor Kate Bosch started riding at the age of seven and has passionately pursued a life with horses since then. She graduated Centenary College in 2010 with a Bachelor's Degree in Equine Studies, with her primary focus on barn management. She began working at Stony Brook Farm immediately after graduating from college. Kate prides herself in maintaining a clean, organized barn with a friendly atmosphere. She is a well rounded horse person, with experience in a wide variety of riding disiplines including english, western, gaited horses, and driving. She believes consistency, quietness, and patience play key roles in creating both confident horses and riders.</p><br>
-        </div>
-        <div class="col-sm-4">
-          <h2 class="mt-4">Contact Us</h2>
-          <address>
-            <strong>Stony Brook Stables</strong>
-            <br>220 Cold Soil Rd
-            <br>Princeton, NJ 08540
-            <br>
-          </address>
-          <address>
-            <i class="fas fa-phone"></i>
-             (609) 225-9353
-            <br>
-            <i class="fas fa-envelope"></i>
-            <a href="mailto:stonybrookstables@gmail.com" class="link">stonybrookstables@gmail.com</a>
-            <br>
-            <i class="fab fa-facebook"></i>
-            <a href="https://www.facebook.com/Stony-Brook-Farm-1693939340916129/" target="_blank" class="link">
-             Stony Brook Farm</a>
-          </address>
-        </div>
-      </div>
-    
+      <p class="m-0 text-center text-white">Stony Brook Farms and Stables, LLC.  &copy; 2020</p>
     </div>
     <!-- /.container -->
+  </footer>
 
-    <!-- Footer -->
-    <footer class="py-3">
-        <div id="contact">
-        <p>Contact Us <span class="contactbar">|</span>
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-            <a href="https://goo.gl/maps/64zgwEeNZBk" target="_blank">
-            <i class="fa fa-map-marker-alt" aria-hidden="true"></i> 220 Cold Soil Rd, Princeton NJ 08540 <span class="contactbar">|</span>
-            </a>
-
-            <a href="mailto:Stonybrookstables@gmail.com?" target="_top">
-            <i class="fas fa-envelope"></i> stonybrookstables@gmail.com <span class="contactbar">|</span>
-            </a>
-
-            <i class="fas fa-phone"></i> 609-225-9353 <span class="contactbar">|</span>
-
-            <a href="https://www.facebook.com/Stony-Brook-Farm-1693939340916129/" target="_blank">
-            <i class="fab fa-facebook"></i> Facebook</a>
-        </p>
-         <p class="copyright">Stony Brook Farms and Stables, LLC. &copy; 2018</p>
-    </div>
-      <!-- /.container -->
-    </footer>
-
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-  </body>
+</body>
 
 </html>
