--- a/gallery.html
+++ b/gallery.html
@@ -35,6 +35,9 @@
             </a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="camp.html">Summer Camp</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="services.html">Services</a>
           </li>
           <li class="nav-item">
