--- a/sale.html
+++ b/sale.html
@@ -33,6 +33,9 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="camp.html">Summer Camp</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="services.html">Services</a>
           </li>
         <li class="nav-item active">
