--- a/services.html
+++ b/services.html
@@ -32,6 +32,9 @@
           <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="camp.html">Summer Camp</a>
+          </li>
           <li class="nav-item active">
             <a class="nav-link" href="services.html">Services
               <span class="sr-only">(current)</span>
@@ -72,7 +75,7 @@
         
       </div>
       <div class="col-lg-6">
-        <div class="row">
+        <div class="">
             <img class="img-fluid rounded" src="img/boarding/3.jpg" alt="">
         </div>
         <div class="row">
@@ -91,7 +94,7 @@
     <!-- Content Row -->
     <div class="row">
     <div class="col-lg-6" >
-        <div class="row">
+        <div class="">
             <img class="img-fluid rounded" src="img/lesson/1.jpg" alt="">
         </div>
         <!--<div class="row">
@@ -127,7 +130,7 @@
         
       </div>
       <div class="col-lg-6">
-        <div class="row">
+        <div class="">
             <img class="img-fluid rounded" src="img/retirement/1.jpg" alt="">
         </div>
         <div class="row">
