--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
             </a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="camp.html">Summer Camp</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="services.html">Services</a>
           </li>
           <li class="nav-item">
@@ -78,6 +81,18 @@
 
     <!-- Content Row -->
     <div class="row">
+      <div class="col-md-4 mb-5">
+        <div class="card h-100">
+          <div class="card-body">
+            <h2 class="card-title">Pony Summer Camp 2020</h2>
+            <p class="card-text">Stony Brook Farm will be offering summer camp July 20th – 24th, 2020 from 8:30 to 3:30. Riders of all skill levels are encouraged to join.</p>
+          </div>
+          <div class="card-footer">
+            <a href="services.html" class="btn btn-success btn-sm">Learn More</a>
+          </div>
+        </div>
+      </div>
+      <!-- /.col-md-4 -->
       <div class="col-md-4 mb-5">
         <div class="card h-100">
           <div class="card-body">
