--- a/camp.html
+++ b/camp.html
@@ -103,11 +103,11 @@
                 <img class="img-fluid rounded" src="img/camp/4.jpg" alt="">
             </div>
             <div class="col-sm-6 campImg serviceImgR">
-                <img class="img-fluid rounded" src="img/camp/5.jpg" alt="">
+                <img class="img-fluid rounded" src="img/camp/5.JPG" alt="">
             </div>
         </div>
         <div class="">
-            <img class="img-fluid rounded" src="img/camp/6.jpg" alt="">
+            <img class="img-fluid rounded" src="img/camp/6.JPG" alt="">
         </div>
           
       </div>
