--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <p class="card-text">Stony Brook Farm will be offering summer camp July 20th – 24th, 2020 from 8:30 to 3:30. Riders of all skill levels are encouraged to join.</p>
           </div>
           <div class="card-footer">
-            <a href="services.html" class="btn btn-success btn-sm">Learn More</a>
+            <a href="camp.html" class="btn btn-success btn-sm">Learn More</a>
           </div>
         </div>
       </div>
