--- a/camp.html
+++ b/camp.html
@@ -64,7 +64,7 @@
         <p><b>Friday, July 24th</b> – We will invite our riders to show off their skills as we host an on farm gymkhana event from 1-3. This event will include all the games from the fun ride and campers will have the opportunity to polish their horses using the barn skills they’ve acquired over the week. Families are welcome and encouraged to attend. </p>
         <br><br>
         <p><b>Daily Camp Schedule Monday - Thursday:</b></p>
-        <ul>
+        <ul style="list-style-type:none;">
             <li>8:30 - 9:00 – Campers arrive, receive horse assignments for the day and begin tacking up</li>
             <li>9:00 - 10:00 – Group lesson</li>
             <li>10:15 – 11:00 – bath horses, put away</li>
