--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
               <span class="sr-only">(current)</span>
             </a>
           </li>
-          <li class="nav-item">
+          <!--<li class="nav-item">
             <a class="nav-link" href="camp.html">Summer Camp</a>
-          </li>
+          </li>-->
           <li class="nav-item">
             <a class="nav-link" href="services.html">Services</a>
           </li>
@@ -81,7 +81,7 @@
 
     <!-- Content Row -->
     <div class="row">
-      <div class="col-md-4 mb-5">
+      <!--<div class="col-md-4 mb-5">
         <div class="card h-100">
           <div class="card-body">
             <h2 class="card-title">Pony Summer Camp 2020</h2>
@@ -91,7 +91,7 @@
             <a href="camp.html" class="btn btn-success btn-sm">Learn More</a>
           </div>
         </div>
-      </div>
+      </div>-->
       <!-- /.col-md-4 -->
       <div class="col-md-4 mb-5">
         <div class="card h-100">
