--- a/gallery.html
+++ b/gallery.html
@@ -23,7 +23,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Stony Brook Stables</a>
+      <a class="navbar-brand" href="index.html">Stony Brook Stables</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -34,9 +34,9 @@
               <span class="sr-only">(current)</span>
             </a>
           </li>
-          <li class="nav-item">
+          <!--<li class="nav-item">
             <a class="nav-link" href="camp.html">Summer Camp</a>
-          </li>
+          </li>-->
           <li class="nav-item">
             <a class="nav-link" href="services.html">Services</a>
           </li>
