--- a/services.html
+++ b/services.html
@@ -32,9 +32,9 @@
           <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
           </li>
-          <!--<li class="nav-item">
+          <li class="nav-item">
             <a class="nav-link" href="camp.html">Summer Camp</a>
-          </li>-->
+          </li>
           <li class="nav-item active">
             <a class="nav-link" href="services.html">Services
               <span class="sr-only">(current)</span>
@@ -152,7 +152,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Stony Brook Farms and Stables, LLC.  &copy; 2020</p>
+      <p class="m-0 text-center text-white">Stony Brook Farms and Stables, LLC.  &copy; 2021</p>
     </div>
     <!-- /.container -->
   </footer>
