--- a/camp.html
+++ b/camp.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Summer Camp 2020 | Stony Brook Stables</title>
+  <title>Summer Camp 2021 | Stony Brook Stables</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -59,9 +59,9 @@
     <!-- Content Row -->
     <div class="row" style="padding-top:50px;">
       <div class="col-lg-12" id="Boarding">
-        <h2>Summer Pony Camp 2020</h2>
-        <p>Stony Brook Farm will be offering summer camp <b>July 20th – 24th, 2020 from 8:30 to 3:30</b>. Riders of all skill levels are encouraged to join, however riders must be able to groom and tack their own horses and ride off the lunge line in order to attend. Camp will include two rides a day; a formal group lesson in the morning and a “fun” ride in the afternoon which will include gymkhana type games and bareback riding for those comfortable. Every day will include a ground lesson in the barn, which campers will be invited to practice during their day. </p>
-        <p><b>Friday, July 24th</b> – We will invite our riders to show off their skills as we host an on farm gymkhana event from 1-3. This event will include all the games from the fun ride and campers will have the opportunity to polish their horses using the barn skills they’ve acquired over the week. Families are welcome and encouraged to attend. </p>
+        <h2>Summer Pony Camp 2021</h2>
+        <p>Stony Brook Farm will be offering summer camp <b>July 12th - 16th from 8:30 to 3:30</b>. After care available at additional cost. Riders of all skill levels are encouraged to join, however riders must be able to groom and tack their own horses and ride off the lunge line in order to attend. Camp will include two rides a day; a formal group lesson in the morning and a “fun” ride in the afternoon which will include gymkhana type games and trail riding. Every day will include a ground lesson in the barn, which campers will be invited to practice during their day. </p>
+        <p><b>Friday, July 16th</b> – We will invite our riders to show off their skills as we host an on farm gymkhana event from 11-1. This event will include both judged equitation classes as well as gymkhana games to exhibit the skills learned and practiced over the week. Campers will have the opportunity to polish their horses using the barn skills they’ve acquired. Families are welcome and encouraged to attend.</p>
         <br><br>
         <p><b>Daily Camp Schedule Monday - Thursday:</b></p>
         <ul style="list-style-type:none;">
@@ -75,8 +75,7 @@
             <li>2:30 – 3:30 – put horses away, practice barn lesson</li>
         </ul>
         <br><br>
-        <p><b><u>After care available at additional cost.</u></b></p>
-        <p><b>$575/child 50% deposit due by June 1, 2020, balance due July 1, 2020.</b></p>
+        <p><b><u>Please email us for pricing and registration. </u></b></p>
         
       </div>
     </div>
@@ -120,7 +119,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Stony Brook Farms and Stables, LLC.  &copy; 2020</p>
+      <p class="m-0 text-center text-white">Stony Brook Farms and Stables, LLC.  &copy; 2021</p>
     </div>
     <!-- /.container -->
   </footer>
