--- a/gallery.html
+++ b/gallery.html
@@ -34,9 +34,9 @@
               <span class="sr-only">(current)</span>
             </a>
           </li>
-          <!--<li class="nav-item">
+          <li class="nav-item">
             <a class="nav-link" href="camp.html">Summer Camp</a>
-          </li>-->
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="services.html">Services</a>
           </li>
@@ -67,7 +67,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Stony Brook Farms and Stables, LLC.  &copy; 2020</p>
+      <p class="m-0 text-center text-white">Stony Brook Farms and Stables, LLC.  &copy; 2021</p>
     </div>
     <!-- /.container -->
   </footer>
