--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
               <span class="sr-only">(current)</span>
             </a>
           </li>
-          <!--<li class="nav-item">
+          <li class="nav-item">
             <a class="nav-link" href="camp.html">Summer Camp</a>
-          </li>-->
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="services.html">Services</a>
           </li>
@@ -81,17 +81,17 @@
 
     <!-- Content Row -->
     <div class="row">
-      <!--<div class="col-md-4 mb-5">
+      <div class="col-md-4 mb-5">
         <div class="card h-100">
           <div class="card-body">
-            <h2 class="card-title">Pony Summer Camp 2020</h2>
-            <p class="card-text">Stony Brook Farm will be offering summer camp July 20th – 24th, 2020 from 8:30 to 3:30. Riders of all skill levels are encouraged to join.</p>
+            <h2 class="card-title">Pony Summer Camp 2021</h2>
+            <p class="card-text">Stony Brook Farm will be offering summer camp July 12th-16th from 8:30 to 3:30. Riders of all skill levels are encouraged to join.</p>
           </div>
           <div class="card-footer">
             <a href="camp.html" class="btn btn-success btn-sm">Learn More</a>
           </div>
         </div>
-      </div>-->
+      </div>
       <!-- /.col-md-4 -->
       <div class="col-md-4 mb-5">
         <div class="card h-100">
@@ -139,7 +139,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Stony Brook Farms and Stables, LLC.  &copy; 2020</p>
+      <p class="m-0 text-center text-white">Stony Brook Farms and Stables, LLC.  &copy; 2021</p>
     </div>
     <!-- /.container -->
   </footer>
