remove Kate from contact page

--- a/contact.html
+++ b/contact.html
@@ -60,11 +60,13 @@
   <div class="container">
 
    <div class="row" style="padding-top:50px;">
+<!--
       <div class="col-md-8 mb-5">
         <h2>Barn Manager: Kate Bosch</h2>
         <hr>
         <p>Barn manager and instructor Kate Bosch started riding at the age of seven and has passionately pursued a life with horses since then. She graduated Centenary College in 2010 with a Bachelor's Degree in Equine Studies, with her primary focus on barn management. She began working at Stony Brook Farm immediately after graduating from college. Kate prides herself in maintaining a clean, organized barn with a friendly atmosphere. She is a well rounded horse person, with experience in a wide variety of riding disiplines including english, western, gaited horses, and driving. She believes consistency, quietness, and patience play key roles in creating both confident horses and riders.</p>
       </div>
+-->
       <div class="col-md-4 mb-5">
         <h2>Contact Us</h2>
         <hr>
@@ -79,7 +81,7 @@
           (609) 225-9353
           <br>
           <abbr title="Email">E:</abbr>
-          <a href="mailto:stonybrookstables@gmail.com">stonybrookstables@gmail.com</a>
+          <a href="mailto:drdendi@aol.com">drdendi@aol.com</a>
         </address>
       </div>
     </div>
