--- a/camp.html
+++ b/camp.html
@@ -59,6 +59,8 @@
     <!-- Content Row -->
     <div class="row" style="padding-top:50px;">
       <div class="col-lg-12" id="Boarding">
+          <h2>Pony Camp will return in 2022!</h2>
+<!--
         <h2>Summer Pony Camp 2021</h2>
         <p>Stony Brook Farm will be offering summer camp <b>July 12th - 16th from 8:30 to 3:30</b>. After care available at additional cost. Riders of all skill levels are encouraged to join, however riders must be able to groom and tack their own horses and ride off the lunge line in order to attend. Camp will include two rides a day; a formal group lesson in the morning and a “fun” ride in the afternoon which will include gymkhana type games and trail riding. Every day will include a ground lesson in the barn, which campers will be invited to practice during their day. </p>
         <p><b>Friday, July 16th</b> – We will invite our riders to show off their skills as we host an on farm gymkhana event from 11-1. This event will include both judged equitation classes as well as gymkhana games to exhibit the skills learned and practiced over the week. Campers will have the opportunity to polish their horses using the barn skills they’ve acquired. Families are welcome and encouraged to attend.</p>
@@ -76,6 +78,7 @@
         </ul>
         <br><br>
         <p><b><u>Please email us for pricing and registration. </u></b></p>
+-->
         
       </div>
     </div>
