--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
           (609) 225-9353
           <br>
           <abbr title="Email">E:</abbr>
-          <a href="mailto:drdendi@aol.com">drdendi@aol.com</a>
+          <a href="mailto:stonybrookstables.us@gmail.com">stonybrookstables.us@gmail.com</a>
         </address>
       </div>
     </div>
