--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="camp.html">Summer Camp</a>
+            <a class="nav-link" href="events.html">Events</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="services.html">Services</a>
@@ -81,19 +81,19 @@
 
     <!-- Content Row -->
     <div class="row">
-<!--
+
       <div class="col-md-4 mb-5">
         <div class="card h-100">
           <div class="card-body">
-            <h2 class="card-title">Pony Summer Camp 2021</h2>
-            <p class="card-text">Stony Brook Farm will be offering summer camp July 12th-16th from 8:30 to 3:30. Riders of all skill levels are encouraged to join.</p>
+            <h2 class="card-title">Pony Summer Camp 2022</h2>
+            <p class="card-text">Stony Brook Farm will be offering summer camp 2022. Riders of all skill levels are encouraged to join. More information coming soon! </p>
           </div>
           <div class="card-footer">
-            <a href="camp.html" class="btn btn-success btn-sm">Learn More</a>
+            <a href="events.html#Camp" class="btn btn-success btn-sm">Learn More</a>
           </div>
         </div>
       </div>
--->
+
       <!-- /.col-md-4 -->
       <div class="col-md-4 mb-5">
         <div class="card h-100">
@@ -131,6 +131,21 @@
         </div>
       </div>
       <!-- /.col-md-4 -->
+        
+    <!-- /.col-md-4 -->
+      <div class="col-md-4 mb-5">
+        <div class="card h-100">
+          <div class="card-body">
+            <h2 class="card-title">Pony Parties</h2>
+            <p class="card-text">Celebrate your child's special day with a Pony Party at Stony Brook Stables! A fun day of adventure, pony rides and goodie bags!</p>
+          </div>
+          <div class="card-footer">
+            <a href="events.html" class="btn btn-success btn-sm">Learn More</a>
+          </div>
+        </div>
+      </div>
+      <!-- /.col-md-4 -->
+        
 
     </div>
     <!-- /.row -->
@@ -141,7 +156,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Stony Brook Farms and Stables, LLC.  &copy; 2021</p>
+      <p class="m-0 text-center text-white">Stony Brook Farms and Stables, LLC.  &copy; 2022</p>
     </div>
     <!-- /.container -->
   </footer>
