--- a/services.html
+++ b/services.html
@@ -33,7 +33,7 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="camp.html">Summer Camp</a>
+            <a class="nav-link" href="events.html">Events</a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="services.html">Services
@@ -65,11 +65,11 @@
         <ul>
             <li>19 stall barn</li>
             <li>Direct access to 1,600 + acres of well maintained trails</li>
-            <li>Outdoor Arena with sand footing (indoor coming soon)</li>
+            <li>Two Outdoor Arenas with sand footing (indoor coming soon)</li>
             <li>Ample turn outs with brand new rubber coated wire and wood fencing</li>
             <li>Access to Run-Ins in all turn outs</li>
             <li>Cross country jump course</li>
-            <li>Heated water troughs </li>
+            <li>Heated water troughs</li>
         </ul>
         <p>Stall and field board available. Please <a href="contact.html">contact us</a> for more details or to arrange a farm visit.</p>
         
@@ -152,7 +152,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Stony Brook Farms and Stables, LLC.  &copy; 2021</p>
+      <p class="m-0 text-center text-white">Stony Brook Farms and Stables, LLC.  &copy; 2022</p>
     </div>
     <!-- /.container -->
   </footer>
