--- a/sale.html
+++ b/sale.html
@@ -33,7 +33,7 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="camp.html">Summer Camp</a>
+            <a class="nav-link" href="events.html">Events</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="services.html">Services</a>
@@ -79,7 +79,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark saleFooter">
     <div class="container">
-      <p class="m-0 text-center text-white">Stony Brook Farms and Stables, LLC.  &copy; 2021</p>
+      <p class="m-0 text-center text-white">Stony Brook Farms and Stables, LLC.  &copy; 2022</p>
     </div>
     <!-- /.container -->
   </footer>
