pony camp 2022 update

--- a/events.html
+++ b/events.html
@@ -87,26 +87,23 @@
     <!-- Content Row -->
     <div class="row" >
       <div class="col-lg-12" id="Boarding">
-          <h2>Pony Camp will return in 2022!</h2>
-<!--
-        <h2>Summer Pony Camp 2021</h2>
-        <p>Stony Brook Farm will be offering summer camp <b>July 12th - 16th from 8:30 to 3:30</b>. After care available at additional cost. Riders of all skill levels are encouraged to join, however riders must be able to groom and tack their own horses and ride off the lunge line in order to attend. Camp will include two rides a day; a formal group lesson in the morning and a “fun” ride in the afternoon which will include gymkhana type games and trail riding. Every day will include a ground lesson in the barn, which campers will be invited to practice during their day. </p>
-        <p><b>Friday, July 16th</b> – We will invite our riders to show off their skills as we host an on farm gymkhana event from 11-1. This event will include both judged equitation classes as well as gymkhana games to exhibit the skills learned and practiced over the week. Campers will have the opportunity to polish their horses using the barn skills they’ve acquired. Families are welcome and encouraged to attend.</p>
+        <h2>Summer Pony Camp 2022</h2>
+        <p>Stony Brook Stables will be offering summer camp!
+        <br>
+        <br>
+        <b>Week 1:</b>  June 27th  --  July 1st
+        <br>
+        <b>Week 2:</b>  Aug 1st  --  Aug 5th
+        <br>
+
+
+        <p>Ages 6 – 13 yrs</p>
+          <p>Full day 9:00am - 3:00pm or Half day 9am - noon</p>
+        <p>Beginner through Intermediate Riding Levels. Children will enjoy riding lessons, horse safety and care instruction, arts and crafts. Party and fun show on Fridays.</p>
+        
         <br><br>
-        <p><b>Daily Camp Schedule Monday - Thursday:</b></p>
-        <ul style="list-style-type:none;">
-            <li>8:30 - 9:00 – Campers arrive, receive horse assignments for the day and begin tacking up</li>
-            <li>9:00 - 10:00 – Group lesson</li>
-            <li>10:15 – 11:00 – bath horses, put away</li>
-            <li>11:15 – 12:00 – ground lesson in the barn </li>
-            <li>12:15 – 1:00 – lunch</li>
-            <li>1:00 – 1:30 – tack up</li>
-            <li>1:30 – 2:30 – Fun ride in ring or trail ride </li>
-            <li>2:30 – 3:30 – put horses away, practice barn lesson</li>
-        </ul>
-        <br><br>
-        <p><b><u>Please email us for pricing and registration. </u></b></p>
--->
+          <p><b><u><a style="color:black" href="contact.html">Please contact us for pricing and registration. </a></u></b></p>
+
         
       </div>
     </div>
