--- a/index.html
+++ b/index.html
@@ -73,9 +73,16 @@
     <!-- /.row -->
 
     <!-- Call to Action Well -->
+<!--
     <div class="card text-white bg-success my-5 py-4 text-center">
       <div class="card-body">
         <p class="text-white m-0">Now accepting new stall and field boarders! Please <a href="contact.html" class="stretched-link" id="homeLink">contact us</a> for more details or to arrange a farm visit.</p>
+      </div>
+    </div>
+-->
+    <div class="card text-white bg-info my-5 py-4 text-center">
+      <div class="card-body">
+        <p class="text-white m-0">Registration for Summer Pony Camp 2022 is now open! Please <a href="events.html#Camp" class="stretched-link" id="homeLink">click here</a> for more details.</p>
       </div>
     </div>
 
@@ -86,7 +93,7 @@
         <div class="card h-100">
           <div class="card-body">
             <h2 class="card-title">Pony Summer Camp 2022</h2>
-            <p class="card-text">Stony Brook Farm will be offering summer camp 2022. Riders of all skill levels are encouraged to join. More information coming soon! </p>
+            <p class="card-text">Stony Brook Farm will be offering summer camp 2022. For children ages 6 - 13 years.</p>
           </div>
           <div class="card-footer">
             <a href="events.html#Camp" class="btn btn-success btn-sm">Learn More</a>
