facebook camp link update 1

--- a/events.html
+++ b/events.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
+  <meta property="og:image" content="img/camp/1.jpg" />
+  <meta property="og:description" content="Stony Brook Stables will be offering summer camp!" />
 
   <title>Events | Stony Brook Stables</title>
 
