remove summer info

--- a/index.html
+++ b/index.html
@@ -73,33 +73,21 @@
     <!-- /.row -->
 
     <!-- Call to Action Well -->
-<!--
     <div class="card text-white bg-success my-5 py-4 text-center">
       <div class="card-body">
         <p class="text-white m-0">Now accepting new stall and field boarders! Please <a href="contact.html" class="stretched-link" id="homeLink">contact us</a> for more details or to arrange a farm visit.</p>
       </div>
     </div>
--->
+
+<!--
     <div class="card text-white bg-info my-5 py-4 text-center">
       <div class="card-body">
         <p class="text-white m-0">Registration for Summer Pony Camp 2022 is now open! Please <a href="events.html#Camp" class="stretched-link" id="homeLink">click here</a> for more details.</p>
       </div>
     </div>
-
+-->
     <!-- Content Row -->
     <div class="row">
-
-      <div class="col-md-4 mb-5">
-        <div class="card h-100">
-          <div class="card-body">
-            <h2 class="card-title">Pony Summer Camp 2022</h2>
-            <p class="card-text">Stony Brook Farm will be offering summer camp 2022. For children ages 6 - 13 years.</p>
-          </div>
-          <div class="card-footer">
-            <a href="events.html#Camp" class="btn btn-success btn-sm">Learn More</a>
-          </div>
-        </div>
-      </div>
 
       <!-- /.col-md-4 -->
       <div class="col-md-4 mb-5">
@@ -152,7 +140,17 @@
         </div>
       </div>
       <!-- /.col-md-4 -->
-        
+        <div class="col-md-4 mb-5">
+        <div class="card h-100">
+          <div class="card-body">
+            <h2 class="card-title">Pony Summer Camp 2023</h2>
+            <p class="card-text">Stony Brook Farm will be offering summer camp 2023. More details to be announced later!</p>
+          </div>
+          <div class="card-footer">
+            <a href="events.html#Camp" class="btn btn-success btn-sm">Learn More</a>
+          </div>
+        </div>
+      </div>
 
     </div>
     <!-- /.row -->
