--- a/events.html
+++ b/events.html
@@ -89,9 +89,9 @@
     <!-- Content Row -->
     <div class="row" >
       <div class="col-lg-12" id="Boarding">
-        <h2>Summer Pony Camp 2022</h2>
-        <p>Stony Brook Stables will be offering summer camp!
-        <br>
+        <h2>Summer Pony Camp 2023</h2>
+        <p>Stony Brook Stables will be offering summer camp! More details coming soon.
+        <!--<br>
         <br>
         <b>Week 1:</b>  June 27th  --  July 1st
         <br>
@@ -105,7 +105,7 @@
         
         <br><br>
           <p><b><u><a style="color:black" href="contact.html">Please contact us for pricing and registration. </a></u></b></p>
-
+-->
         
       </div>
     </div>
@@ -118,7 +118,7 @@
         </div>
         <div class="row">
             <div class="col-sm-6 serviceImg serviceImgL">
-                <img class="img-fluid rounded" src="img/camp/2.jpg" alt="">
+                <img class="img-fluid rounded" src="img/lesson/8.jpg" alt="">
             </div>
             <div class="col-sm-6 serviceImg serviceImgR">
                 <img class="img-fluid rounded" src="img/camp/3.jpg" alt="">
@@ -149,7 +149,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Stony Brook Farms and Stables, LLC.  &copy; 2022</p>
+      <p class="m-0 text-center text-white">Stony Brook Farms and Stables, LLC.  &copy; 2023</p>
     </div>
     <!-- /.container -->
   </footer>
